# chatgpt-aws-lambda-telegram-bot

./: .gitignore  LICENSE  README.md  pyproject.toml  samconfig.toml  template.yaml
.github/workflows/: sam-pipeline.yml
scripts/: clean.sh  create_api_endpoint.sh  deploy.sh  event.json  lambda_permission.sh  test.sh
scripts/sql/: init.sql
src/: database.py  handler.py  openai_client.py
src/models/: user.py
src/services/: user_service.py
